# src/routes/pdf.router.ts
@@ -7,12 +7,13 @@ const PDFRouter = Router();
 const dynamicUploader = new DynamicUploadMiddleware({ type: "single" });
 const pdfController = new PDFController();
 
-PDFRouter.post(
-  "/fill",
-  verifyFieldNames,
-  dynamicUploader.middleware,
-  pdfController.fillPdf
-);
+// TODO: Implement the routes for the PDFRouter to support through file upload
+// PDFRouter.post(
+//   "/fill",
+//   verifyFieldNames,
+//   dynamicUploader.middleware,
+//   pdfController.fillPdf
+// );
 
 PDFRouter.post("/fill-by-url", pdfController.fillPdfByUrl);
 PDFRouter.post("/fill-pdf-by-name", pdfController.fillPdfByName);
