# swagger.json
@@ -32,73 +32,6 @@
     }
   ],
   "paths": {
-    "/fill": {
-      "post": {
-        "summary": "Fill a PDF with provided data",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "fields": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "field_name": {
-                          "type": "string"
-                        },
-                        "value": {
-                          "type": "string"
-                        }
-                      }
-                    }
-                  }
-                },
-                "required": ["fields"]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string"
-                    },
-                    "data": {
-                      "type": "object"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/fill-by-url": {
       "post": {
         "summary": "Fill a PDF from a provided URL with given data",
@@ -118,13 +51,60 @@
                     "items": {
                       "type": "object",
                       "properties": {
-                        "field_name": {
-                          "type": "string"
+                        "accessor": {
+                          "type": "string",
+                          "description": "It is the field name that you want to fill in the pdf file"
                         },
                         "value": {
-                          "type": "string"
+                          "type": "string",
+                          "description": "It is the value of the field that you want to fill in the pdf file"
+                        },
+                        "type": {
+                          "type": "string",
+                          "enum": [
+                            "text",
+                            "dropdown",
+                            "checkbox",
+                            "radio",
+                            "image"
+                          ],
+                          "description": "It is the type of the field that you want to fill in the pdf file"
+                        },
+                        "coordinates": {
+                          "type": "object",
+                          "properties": {
+                            "x": {
+                              "type": "number",
+                              "description": "It is the x coordinate of the field that you want to fill in the pdf file"
+                            },
+                            "y": {
+                              "type": "number",
+                              "description": "It is the y coordinate of the field that you want to fill in the pdf file"
+                            },
+                            "width": {
+                              "type": "number",
+                              "description": "It is the width of the field that you want to fill in the pdf file"
+                            },
+                            "height": {
+                              "type": "number",
+                              "description": "It is the height of the field that you want to fill in the pdf file"
+                            },
+                            "page_index": {
+                              "type": "number",
+                              "description": "It is the page index of the field that you want to fill in the pdf file"
+                            }
+                          },
+                          "required": [
+                            "x",
+                            "y",
+                            "width",
+                            "height",
+                            "page_index"
+                          ],
+                          "description": "Optional coordinates for the field"
                         }
-                      }
+                      },
+                      "required": ["accessor", "value", "type"]
                     }
                   }
                 },
@@ -188,13 +168,60 @@
                     "items": {
                       "type": "object",
                       "properties": {
-                        "field_name": {
-                          "type": "string"
+                        "accessor": {
+                          "type": "string",
+                          "description": "It is the field name that you want to fill in the pdf file"
                         },
                         "value": {
-                          "type": "string"
+                          "type": "string",
+                          "description": "It is the value of the field that you want to fill in the pdf file"
+                        },
+                        "type": {
+                          "type": "string",
+                          "enum": [
+                            "text",
+                            "dropdown",
+                            "checkbox",
+                            "radio",
+                            "image"
+                          ],
+                          "description": "It is the type of the field that you want to fill in the pdf file"
+                        },
+                        "coordinates": {
+                          "type": "object",
+                          "properties": {
+                            "x": {
+                              "type": "number",
+                              "description": "It is the x coordinate of the field that you want to fill in the pdf file"
+                            },
+                            "y": {
+                              "type": "number",
+                              "description": "It is the y coordinate of the field that you want to fill in the pdf file"
+                            },
+                            "width": {
+                              "type": "number",
+                              "description": "It is the width of the field that you want to fill in the pdf file"
+                            },
+                            "height": {
+                              "type": "number",
+                              "description": "It is the height of the field that you want to fill in the pdf file"
+                            },
+                            "page_index": {
+                              "type": "number",
+                              "description": "It is the page index of the field that you want to fill in the pdf file"
+                            }
+                          },
+                          "required": [
+                            "x",
+                            "y",
+                            "width",
+                            "height",
+                            "page_index"
+                          ],
+                          "description": "Optional coordinates for the field"
                         }
-                      }
+                      },
+                      "required": ["accessor", "value", "type"]
                     }
                   }
                 },
